# Purple

./: .gitignore  CMakeLists.txt  README.md
dirichlet_solver/: CMakeLists.txt
dirichlet_solver/src/: InputParser.h  StreamParser.cpp  StreamParser.h  main.cpp
dirichlet_solver/test/: input_parser_tests.cpp
dirichlet_task_generator/src/: MeshGenerator.h  TaskGenerator.cpp  TaskGenerator.h  main.cpp
dirichlet_task_generator/test/: mesh_generator_tests.cpp
libs/googletest/src/: gtest-internal-inl.h  gtest.cc
purple/: CMakeLists.txt
purple/include/purple/: Cluster.h  Job.h  ResultInfo.h  cluster_tdef.cpp
purple/test/: avg.h  sort.h
src/: CMakeLists.txt
src/algorithm_tests/: CMakeLists.txt
src/algorithm_tests/src/: GeneratingJob.h  main.cpp
src/dirichlet/: CMakeLists.txt
src/dirichlet/solver/: CMakeLists.txt
src/dirichlet/solver/src/: Input.h  InputParser.h  Result.h  Solver.cpp  Solver.h  StreamParser.cpp  StreamParser.h  main.cpp
src/dirichlet/solver/src/conjugation/: Job.h  Processor.cpp  Processor.h
src/dirichlet/solver/src/evaluation/: Job.h  Processor.cpp  Processor.h  Section.h
src/dirichlet/solver/test/: conjugation_tests.cpp  evaluation_tests.cpp  input_parser_tests.cpp  solver_tests.cpp  test_input_300.in  test_input_300_1.in  test_input_300_20.in  test_output_300.csv  test_output_300.out
src/dirichlet/task_generator/: CMakeLists.txt
src/dirichlet/task_generator/src/: MeshGenerator.cpp  TaskGenerator.cpp  TaskGenerator.h  config.h  main.cpp
src/dirichlet_solver/: CMakeLists.txt
src/dirichlet_solver/src/: DirichletJob.cpp  DirichletJob.h  Input.h  Job.cpp  Job.h  Processor.cpp  Processor.h  Result.h  StreamParser.cpp  main.cpp
src/dirichlet_solver/test/: input_parser_tests.cpp  processor_tests.cpp
src/dirichlet_task_generator/src/: MeshGenerator.cpp  MeshGenerator.h  TaskGenerator.cpp  TaskGenerator.h  config.h  main.cpp
src/dirichlet_task_generator/test/: mesh_generator_tests.cpp  task_generator_tests.cpp
src/libs/cxxopts-master/: CMakeLists.txt
src/libs/json/: CMakeLists.txt
src/monitoring/: CMakeLists.txt
src/monitoring/include/monitoring/: ConsoleLogger.h  Group.h
src/monitoring/include/monitoring/console/: Logger.h
src/monitoring/include/monitoring/web/: Logger.h
src/monitoring/src/: ConsoleLogger.cpp  Formatter.h
src/monitoring/src/console/: Formatter.cpp  Formatter.h  Logger.cpp
src/monitoring/src/web/: Formatter.cpp  Formatter.h  Logger.cpp
src/monitoring/test/: console_logger_tests.cpp  monitoring_tests.cpp  wait.h  web_logger_test_app.cpp  web_logger_tests.cpp
src/purple/: CMakeLists.txt
src/purple/include/purple/: Cluster.h  Job.h  JobInfo.h  Processor.h  ResultInfo.h  efdist.h  hdist.h  purple.h
src/purple/include/purple/monitoring/: Logger.h
src/purple/include/purple/monitoring/messages/: Messages.h
src/purple/src/: Cluster.cpp  hdist.h
src/purple/test/: avg.h  distribution_tests.cpp  processing_tests.cpp  sort.h
