project(dirichlet)

############################################################
# Dirichlet Task Generator
############################################################

add_subdirectory(task_generator)

############################################################
# Dirichlet Solver
############################################################

add_subdirectory(solver)